acvus-mir-test/tests/snapshots/e2e__lambda_filter_comparison.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 768
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = undef
     3 |   r3 = fetch @items
     5 |   r4 = list []
     6 |   r5 = call #0(r4)
     8 |   r6 = call #1(r3)
     9 |   r7 = closure L0 []
    10 |   r8 = call #2(r6, r7)
    11 |   r9 = call #3(r8)
    13 |   r10 = call #4(r9)
    14 |   r11 = call #5(r10)
    15 |   r12 = string_concat [T0, T0, T0, r11]
    16 |   commit @items = r5
    17 |   return r12

    ; r0 (v21) : List<Int>
    ; r1 (v22) : List<Int>
    ; r2 (v23) : List<Int>
    ; r3 (@items) : List<Int>
    ; r4 (v6) : Array<Int, 0>
    ; r5 (list(...)) : List<Int>
    ; r6 (iter(...)) : Iterator<Int, Pure, #IdentityId(0)>
    ; r7 (v11) : Fn(&Int) -> Bool
    ; r8 (filter(...)) : Iterator<Int, Pure, #IdentityId(0)>
    ; r9 (collect(...)) : List<Int>
    ; r10 (len(...)) : Int
    ; r11 (to_string(...)) : String
    ; r12 (v19) : String
    ; r13 (@items) : List<Int>
    ; r14 (x) : List<Int>
    ; r15 (v20) : List<Int>
    ; r16 (items) : List<Int>
    ; r17 (v15) : String
    ; r18 (items) : List<Int>
    ; r19 (@items) : List<Int>
    ; r20 (v5) : String
    ; r21 (x) : List<Int>
    ; r22 (v8) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = take (*r2)
     3 |   r3 = r1 > 0 (r4)
     4 |   return r3

    ; r0 (v7) : &Int
    ; r1 (v4) : Int
    ; r2 (v1) : &Int
    ; r3 (v6) : Bool
    ; r4 (v5) : Int
    ; r5 (i) : &Int
    ; r6 (i) : &Int
