acvus-mir-test/tests/snapshots/e2e__lambda_float_arithmetic.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     2 |   r1 = take @vals
     3 |   r2 = call #0(r1)
     4 |   r3 = call #1(r2)
     5 |   r4 = closure L0 []
     6 |   r5 = call #2(r3, r4)
     7 |   r6 = call #3(r5)
     9 |   r7 = T0 + T0
    10 |   r8 = call #4(r6)
    11 |   r9 = call #5(r8)
    12 |   r10 = r7 + r9
    13 |   return r10

    ; r0 (v15) : List<Float>
    ; r1 (@vals) : Array<Float, 3>
    ; r2 (v3) : List<Float>
    ; r3 (iter(...)) : Iterator<Float, Pure, #IdentityId(0)>
    ; r4 (v5) : Fn(Float) -> Float with reads {@vals}
    ; r5 (map(...)) : Iterator<Float, Pure, #IdentityId(0)>
    ; r6 (collect(...)) : List<Float>
    ; r7 (v10) : String
    ; r8 (len(...)) : Int
    ; r9 (to_string(...)) : String
    ; r10 (v14) : String
    ; r11 (x) : List<Float>
    ; r12 (v9) : String
    ; r13 (v1) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     2 |   r1 = r2 * 2.0 (r3)
     3 |   return r1

    ; r0 (v6) : Float
    ; r1 (v5) : Float
    ; r2 (v1) : Float
    ; r3 (v4) : Float
    ; r4 (v) : Float
