acvus-mir-test/tests/snapshots/e2e__lambda_map_arithmetic.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     4 |   r3 = list []
     5 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   r8 = call #3(r7)
    11 |   assign x = r8
    13 |   r9 = ref &x
    14 |   r10 = call #4(r9)
    15 |   assign out = r10
    17 |   r11 = ref &out
    18 |   r12 = call #5(r11)
    19 |   r13 = string_concat [T0, T0, T0, T0, r12]
    20 |   commit @items = r4
    21 |   return r13

    ; r0 (v24) : Vec<i64>
    ; r1 (v25) : Vec<i64>
    ; r2 (@items) : Vec<i64>
    ; r3 (v6) : Array<i64, 0>
    ; r4 (vec(...)) : Vec<i64>
    ; r5 (into_iter(...)) : Iterator<i64, Pure, #IdentityId(0)>
    ; r6 (v11) : Fn(i64) -> i64
    ; r7 (map(...)) : Iterator<i64, Pure, #IdentityId(0)>
    ; r8 (collect(...)) : Vec<i64>
    ; r9 (x.) : &Vec<i64>
    ; r10 (len(...)) : u64
    ; r11 (out.) : &u64
    ; r12 (to_string(...)) : String
    ; r13 (v22) : String
    ; r14 (@items) : Vec<i64>
    ; r15 (x) : Vec<i64>
    ; r16 (items) : Vec<i64>
    ; r17 (v15) : String
    ; r18 (items) : Vec<i64>
    ; r19 (out) : u64
    ; r20 (@items) : Vec<i64>
    ; r21 (v23) : Vec<i64>
    ; r22 (v5) : String
    ; r23 (v8) : String
    ; r24 (v19) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     2 |   r1 = r2 + 1 (r3)
     3 |   return r1

    ; r0 (v6) : i64
    ; r1 (v5) : i64
    ; r2 (v1) : i64
    ; r3 (v4) : i64
    ; r4 (i) : i64
    ; r5 (i) : i64
