acvus-mir-test/tests/snapshots/e2e__lambda_negate_param.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     2 |   r1 = ref @items
     3 |   r2 = load r1
     4 |   r3 = call #0(r2)
     5 |   r4 = call #1(r3)
     6 |   r5 = closure L0 []
     7 |   r6 = call #2(r4, r5)
     8 |   r7 = call #3(r6)
    10 |   r8 = T0 + T0
    11 |   r9 = call #4(r7)
    12 |   r10 = call #5(r9)
    13 |   r11 = r8 + r10
    14 |   return r11

    ; r0 (v18) : List<Int>
    ; r1 (@items) : Ref<Array<Int, 3>>
    ; r2 (v3) : Array<Int, 3>
    ; r3 (v4) : List<Int>
    ; r4 (iter(...)) : Iterator<Int, Pure, #IdentityId(0)>
    ; r5 (v6) : Fn(Int) -> Int
    ; r6 (map(...)) : Iterator<Int, Pure, #IdentityId(0)>
    ; r7 (collect(...)) : List<Int>
    ; r8 (v12) : String
    ; r9 (len(...)) : Int
    ; r10 (to_string(...)) : String
    ; r11 (v17) : String
    ; r12 (v11) : String
    ; r13 (x) : List<Int>
    ; r14 (v1) : String
    ; r15 (v10) : Ref<List<Int>>
    ; r16 (v13) : Ref<List<Int>>

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = -r2
     2 |   return r1

    ; r0 (v7) : Int
    ; r1 (v6) : Int
    ; r2 (v1) : Int
    ; r3 (v3) : Ref<Int>
    ; r4 (i) : Int
    ; r5 (v4) : Ref<Int>
