acvus-mir-test/tests/snapshots/e2e__lambda_not_param.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @flags
     4 |   r3 = list []
     5 |   r4 = call #0(r3)
     7 |   r5 = call #1(r2)
     8 |   r6 = closure L0 []
     9 |   r7 = call #2(r5, r6)
    10 |   r8 = call #3(r7)
    11 |   assign x = r8
    13 |   r9 = ref &x
    14 |   r10 = call #4(r9)
    15 |   r11 = call #5(r10)
    16 |   r12 = string_concat [T0, T0, T0, r11]
    17 |   commit @flags = r4
    18 |   return r12

    ; r0 (v21) : List<Bool>
    ; r1 (v22) : List<Bool>
    ; r2 (@flags) : List<Bool>
    ; r3 (v6) : Array<Bool, 0>
    ; r4 (list(...)) : List<Bool>
    ; r5 (into_iter(...)) : Iterator<Bool, Pure, #IdentityId(0)>
    ; r6 (v11) : Fn(Bool) -> Bool
    ; r7 (map(...)) : Iterator<Bool, Pure, #IdentityId(0)>
    ; r8 (collect(...)) : List<Bool>
    ; r9 (x.) : &List<Bool>
    ; r10 (len(...)) : Int
    ; r11 (to_string(...)) : String
    ; r12 (v19) : String
    ; r13 (@flags) : List<Bool>
    ; r14 (x) : List<Bool>
    ; r15 (v20) : List<Bool>
    ; r16 (flags) : List<Bool>
    ; r17 (v15) : String
    ; r18 (v5) : String
    ; r19 (@flags) : List<Bool>
    ; r20 (flags) : List<Bool>
    ; r21 (v8) : String

=== closure L0 (ValueId(0)) ===
     0 |   r0 = undef
     1 |   r1 = !r2
     2 |   return r1

    ; r0 (v5) : Bool
    ; r1 (v4) : Bool
    ; r2 (v1) : Bool
    ; r3 (i) : Bool
    ; r4 (i) : Bool
