acvus-mir-test/tests/snapshots/e2e__list_destructure_head.snap
---
source: acvus-mir-test/tests/e2e.rs
assertion_line: 267
expression: ir
---
=== literals ===
  T0 = "empty"

=== main ===
     0 |   r0 = undef
     1 |   r1 = undef
     2 |   r2 = fetch @items
     3 |   assign @items = r2
     4 | L2:
     7 |   r3 = true (r4) && true (r5)
     9 |   r6 = r3 && true (r7)
    10 |   jump_if r6 then L3 else L1
    11 | L3:
    12 |   r8 = take @items[0]
    13 |   r9 = take @items[1]
    14 |   r10 = call #0(r8)
    15 |   r11 = string_concat [r10]
    16 |   jump L0(r11, r8, r9)
    17 | L1:
    19 |   r12 = string_concat [T0]
    20 |   jump L0(r12, r0, r1)
    21 | L0(r13: String, r14: Int, r15: Int):  ; merge_of L2
    22 |   r16 = string_concat [r13]
    23 |   r17 = take @items
    24 |   commit @items = r17
    25 |   return r16

    ; r0 (v20) : Int
    ; r1 (v21) : Int
    ; r2 (@items) : Array<Int, 3>
    ; r3 (v5) : Bool
    ; r4 (v3) : Bool
    ; r5 (v4) : Bool
    ; r6 (v7) : Bool
    ; r7 (v6) : Bool
    ; r8 (a) : Int
    ; r9 (b) : Int
    ; r10 (to_string(...)) : String
    ; r11 (v14) : String
    ; r12 (v16) : String
    ; r13 (v17) : String
    ; r14 (v22) : Int
    ; r15 (v23) : Int
    ; r16 (v18) : String
    ; r17 (v19) : Array<Int, 3>
    ; r18 (b) : Int
    ; r19 (a) : Int
    ; r20 (v15) : String
    ; r21 (@items) : Array<Int, 3>
    ; r22 (a) : Int
